--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 {% assign image = page.header | default: site.header %}
 {% assign dark = page.header-dark | is_nil: site.header-dark | is_nil: true %}
 
-{% assign svg = "images/LIMB_logo.svg" | file_exists %}
-{% assign png = "images/LIMB_logo.png" | file_exists %}
-{% assign jpg = "images/LIMB_logo.jpg" | file_exists %}
+{% assign svg = "images/LIMB_logo_black.svg" | file_exists %}
+{% assign png = "images/LIMB_logo_black.png" | file_exists %}
+{% assign jpg = "images/LIMB_logo_black.jpg" | file_exists %}
 {% assign logo = svg | default: png | default: jpg | default: nil %}
 
 <header
