--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -36,8 +36,8 @@
 {% assign jpg = "images/logo.jpg" | file_exists %}
 {% assign icon = png | default: jpg | relative_url %}
 
-{% assign jpg = "images/share.jpg" | file_exists %}
-{% assign png = "images/share.png" | file_exists %}
+{% assign jpg = "images/LIMB_Logo_Full.jpg" | file_exists %}
+{% assign png = "images/LIMB_Logo_Full.png" | file_exists %}
 {% assign share = jpg | default: png | relative_url %}
 
 {% assign published = page.date | date_to_xmlschema %}
