--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -32,13 +32,13 @@
 
 {% assign description = description | xml_escape %}
 
-{% assign png = "images/logo.png" | file_exists %}
-{% assign jpg = "images/logo.jpg" | file_exists %}
+{% assign png = "images/logo_icon.png" | file_exists %}
+{% assign jpg = "images/logo_icon.jpg" | file_exists %}
 {% assign icon = png | default: jpg | relative_url %}
 
 {% assign jpg = "images/LIMB_Logo_Full.jpg" | file_exists %}
 {% assign png = "images/LIMB_Logo_Full.png" | file_exists %}
-{% assign share = jpg | default: png | relative_url %}
+{% assign Full = jpg | default: png | relative_url %}
 
 {% assign published = page.date | date_to_xmlschema %}
 {% assign updated = page.last_modified_at | date_to_xmlschema %}
