--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -32,7 +32,7 @@
 
 {% assign description = description | xml_escape %}
 
-{% assign png = "images/logo_icon.png" | file_exists %}
+{% assign svg = "images/logo_icon.svg" | file_exists %}
 {% assign jpg = "images/logo_icon.jpg" | file_exists %}
 {% assign icon = png | default: jpg | relative_url %}
 
