--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -32,9 +32,11 @@
 
 {% assign description = description | xml_escape %}
 
-{% assign svg = "images/logo_icon.svg" | file_exists %}
-{% assign jpg = "images/logo_icon.jpg" | file_exists %}
-{% assign icon = png | default: jpg | relative_url %}
+{% assign svg = "images/logo_icon.svg" %}
+{% assign png = "images/logo_icon.png" %}
+{% assign icon = svg | relative_url %}
+
+<link rel="icon" type="image/svg+xml" href="{{ icon }}">
 
 {% assign jpg = "images/LIMB_Logo_Full.jpg" | file_exists %}
 {% assign png = "images/LIMB_Logo_Full.png" | file_exists %}
