--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -38,9 +38,9 @@
 
 <link rel="icon" type="image/svg+xml" href="{{ icon }}">
 
-{% assign jpg = "images/LIMB_Logo_Full.jpg" | file_exists %}
-{% assign png = "images/LIMB_Logo_Full.png" | file_exists %}
-{% assign Full = jpg | default: png | relative_url %}
+{% assign jpg = "images/share.jpg" | file_exists %}
+{% assign png = "images/share.png" | file_exists %}
+{% assign share = jpg | default: png | relative_url %}
 
 {% assign published = page.date | date_to_xmlschema %}
 {% assign updated = page.last_modified_at | date_to_xmlschema %}
